tests/specs/ecosystem/schematicos/generate/0_0_2.test
schematicos/generate/0.0.2
-- deno.lock --
{
  "version": "3",
  "packages": {
    "specifiers": {
      "npm:@schematicos/types@0.0.34": "npm:@schematicos/types@0.0.34",
      "npm:prettier@3.2.5": "npm:prettier@3.2.5"
    },
    "npm": {
      "@schematicos/types@0.0.34": {
        "integrity": "sha512-KOb9sdaLoSsstN3/QdTALNCvXZ9NWNMxudMOyCRq7fzxCk555ERCCIG3LBUG7ovOXOn/56dkxIpCpvoj+2zQTQ==",
        "dependencies": {
          "zod": "zod@3.23.8"
        }
      },
      "prettier@3.2.5": {
        "integrity": "sha512-3/GWa9aOC0YeD7LUfvOG2NiDyhOWRvt1k+rcKhOuYnMY24iiCphgneUfJDyFXd6rZCAnuLBv6UeAULtrhT/F4A==",
        "dependencies": {}
      },
      "zod@3.23.8": {
        "integrity": "sha512-XBx9AXhXktjUqnepgTiE5flcKIYWi/rme0Eaj+5Y0lftuGBq+jyRu/md4WnuxqgP1ubdpNCsYEYPxrzVHD8d6g==",
        "dependencies": {}
      }
    }
  },
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
error: TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'SchematicBase'.
  toString(): string {
  ~~~~~~~~
    at file://<tmpdir>/src/elements/Model.ts:38:3

